<resources>
    <string name="app_name">reminder</string>
    <string name="login">login</string>
    <string name="or">or</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="your_notes">Your Notes</string>
    <string name="this_will_be_visible_content">This will be visible content</string>
    <string name="save">Save</string>
    <string name="add_notes">Add Notes</string>
    <string name="enter_the_title">Enter the Title</string>
    <string name="enter_the_content_here">Enter the content here</string>
    <string name="home">Home</string>
    <string name="want_list">Want-List</string>
    <string name="my_notes">My Notes</string>
    <string name="settings">Settings</string>
    <string name="shopping_list">Shopping List</string>
    <string name="_29_01_2022">29-01-2022</string>
    <string name="edit">EDIT</string>
    <string name="edit_note">Edit Note</string>
    <string name="update">Update</string>
    <string name="add_your_list">Add Your List</string>
    <string name="enter_the_list">Enter the List</string>
    <string name="_1">1.</string>
    <string name="apple">Apple</string>
    <string name="hello_name">Hello, Name</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="feb_2022">Feb 2022</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thurs">Thurs</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="_2">2</string>
    <string name="add_your_task">Add Your Task</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="repeat">Repeat</string>
    <string name="add">ADD</string>
    <string name="event">Event</string>
</resources>