<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Month_view_page">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_design_month"
        android:background="@drawable/month_view"
        android:layout_alignParentTop="true"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear"
        android:layout_marginTop="25dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            android:layout_weight="1"

            android:id="@+id/back_month"
            android:contentDescription="@string/hello_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feb_2022"
            android:layout_weight="2"
            android:id="@+id/monthOf_year"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fornt_btn"
            android:layout_weight="1"

            android:id="@+id/front_month"

            android:contentDescription="@string/hello_name" />






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dayslinear"
        android:orientation="horizontal"
        android:background="@color/retro_red"
        android:layout_below="@+id/linear"
        android:layout_marginTop="45dp"
        android:padding="10dp"
        android:elevation="10dp"


        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
           android:textColor="@color/white"
            android:text="@string/sun"
            android:textStyle="bold"
            android:textAlignment="center"

            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:text="@string/mon"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"

            android:text="@string/tue"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textStyle="bold"

            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thurs"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"

            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"

            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textStyle="bold"

            android:textSize="16sp"/>



    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dayslinear"
        android:padding="10dp"
        android:id="@+id/month_grid"
        />









</RelativeLayout>