<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_design_home"
        android:background="@drawable/reminder_top"
        android:layout_alignParentTop="true"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="45dp"
        android:elevation="15sp"
        android:text="@string/hello_name"
        android:textColor="@color/white"
        android:textSize="26sp" />







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_main"
        android:layout_marginTop="120dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            android:layout_weight="1"

            android:id="@+id/back_mweek"
            android:contentDescription="@string/hello_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feb_2022"
            android:layout_weight="2"
            android:id="@+id/month_Of_week"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fornt_btn"
            android:layout_weight="1"

            android:id="@+id/front_week"

            android:contentDescription="@string/hello_name" />






    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dayslinear_week"
        android:orientation="horizontal"
        android:background="@color/retro_red"
        android:layout_below="@+id/linear_main"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:elevation="10dp"


        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:text="@string/sun"
            android:textStyle="bold"
            android:textAlignment="center"

            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:text="@string/mon"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"

            android:text="@string/tue"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textStyle="bold"

            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thurs"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"

            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"

            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/white"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textStyle="bold"

            android:textSize="16sp"/>



    </LinearLayout>




       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:padding="10dp"
           android:id="@+id/week_grid"
           android:layout_below="@+id/dayslinear_week"
           />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/week_grid"
        android:id="@+id/listView_events"
        />






    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/add_event_btn"
        android:layout_alignParentBottom="true"

        android:src="@drawable/ic_baseline_note_add_24"
        android:background="#596590"
        android:layout_above="@+id/bottom_navi_home"
        android:layout_marginBottom="50sp"
        app:maxImageSize="40dp"

        android:contentDescription="@string/your_notes"
        tools:ignore="RelativeOverlap" />










    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:id="@+id/bottom_navi_home"
        app:itemIconTint="@drawable/selector_menu"
        android:background="#D0EC76"
        app:itemTextColor="@drawable/selector_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />


</RelativeLayout>









