<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/count_item"
        android:text="@string/_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingEnd="12dp"
        android:layout_alignBaseline="@+id/item_name"
        android:textColor="@color/teal_200"
        android:layout_marginBottom="2sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/count_item"
        android:id="@+id/item_name"
        android:text="@string/apple"
        android:textColor="@color/orange"

        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="2sp"
        />
    <ImageView
        android:layout_width="22sp"
        android:layout_height="22sp"
        android:id="@+id/remove_item"
        android:layout_toEndOf="@+id/item_name"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_cancel_24"
        android:layout_centerVertical="true"
        android:contentDescription="@string/want_list" />





</RelativeLayout>