<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes_view_page">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/notes_top"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentTop="true"
        android:id="@+id/notes_view_top_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="45dp"
        android:id="@+id/your_view"
        android:text="@string/your_notes"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <Button
        android:id="@+id/edit_view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/your_view"
        android:layout_marginTop="40dp"
        android:text="@string/edit"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="40dp"

        android:layout_below="@id/notes_view_top_design"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/view_title"
            android:textSize="18sp"


            android:layout_marginTop="20sp"
            android:paddingStart="20sp"
            android:text="@string/enter_the_title"


            android:autofillHints=""
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/view_content"
            android:inputType="textMultiLine"
            android:text="@string/enter_the_content_here"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:gravity="top"
            android:padding="15sp"
            android:hint="@string/enter_the_content_here"
            android:autofillHints=""
            tools:ignore="TextViewEdits" />




    </LinearLayout>






</RelativeLayout>