<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Taks_add_page">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_design_event"
        android:background="@drawable/month_view"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="45dp"
        android:elevation="15sp"
        android:layout_centerHorizontal="true"
        android:text="@string/add_your_task"
        android:textColor="@color/black"
        android:textSize="26sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50sp"
        android:layout_below="@+id/top_design_event"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/custom_edittext"
            android:inputType="text"
            android:id="@+id/title_task"
            android:hint="@string/title"
            android:padding="10dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:autofillHints=""
            tools:ignore="LabelFor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/date_task"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""

                android:background="@drawable/custom_edittext"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawablePadding="12dp"
                android:ems="10"
                android:focusable="false"

                android:focusableInTouchMode="false"

                android:hint="@string/date"
                android:inputType="date"
                android:padding="10dp" />

            <EditText
                android:id="@+id/time_task"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                    android:layout_marginStart="10dp"
                android:background="@drawable/custom_edittext"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawablePadding="12dp"

                android:ems="10"
                android:focusable="false"

                android:focusableInTouchMode="false"

                android:hint="@string/time"
                android:inputType="time"
                android:padding="10dp" />



        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:padding="10dp"
            android:layout_gravity="center"


            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:background="@color/retro_red"
            android:backgroundTintMode="add"
            android:backgroundTint="@color/retro_red"
            android:id="@+id/addt_task_btn"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/idea"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:elevation="25dp"
            android:contentDescription="@string/add" />
















    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:id="@+id/bottom_navi_event"
        app:itemIconTint="@drawable/selector_menu"
        android:background="#D0EC76"
        app:itemTextColor="@drawable/selector_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />







</RelativeLayout>